@@ -256,7 +256,7 @@ T_407empty_tag_and_chapter_files:9b56c96b16de691f479a0bff09f7f3b3-9b56c96b16de69
 T_408utf_encodings_with_bom:14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564:passed:20131019-155216:0.215939391
 T_409mux_vp9:fc1aae4cb828024783d254077ead7eb6-aa52fea93972a3294168417659dd8842:passed:20131019-195820:0.071892447
 T_410extract_vp9:b6135380fa07f827384ad1004015d79c:passed:20131019-200643:0.033861429
-T_411ui_locale_pt_PT:7378e1146862dcb96f11caa91d33c5cb-3182bfa8c7ef57b56185285fbd614c98:passed:20131026-154124:0.073196901
+T_411ui_locale_pt_PT:7378e1146862dcb96f11caa91d33c5cb-3182bfa8c7ef57b56185285fbd614c98:failed:20131026-154124:0.073196901
 T_412ui_locale_pl_PL:5d790fb95cbc647fe5cec87e7618758a-a4f512bdc00e1eab4d27a715174df149:passed:20131026-154845:0.077632905
 T_413memory_resize_nonfree_smaller:c1085152b4b60a197bf93d598d066924:passed:20131102-115507:0.066828215
 T_414vc1_no_sequence_headers_before_key_frames:48a03189f55b303a98332e6594f7bd31:passed:20131115-164756:0.133015738
@@ -269,3 +269,4 @@ T_420matroska_attachment_no_fileuid:e4bdf15fe633ad37e6b7860bbb8f7a67-552b6bfab09
 T_421svq3_from_mov:4947c2a51a12097cf2b3d002eff2e9df:passed:20140112-124559:0.195365669
 T_422ac3_rederive_track_parameters_from_bitstream:7cf40379f451c604c8b6fce1f66b52b3:passed:20140215-162358:0.231506136
 T_423deprecated_iso639_codes:9e7d8ab790007cf4f26ea31bb5de148f-good-6dd4fb24b0c76fb411a108102145eb71-good-2f580ffb94651b8782075a35b69258f3-good-4425838d0144c380ddbf59815cf83455-good:passed:20140222-185414:0.243526271
+T_424avc_recover_point_sei_before_second_field:acf1770b0779f44ef1c20a6d05aed379:passed:20140304-190254:1.581374408
